Window no longer render's behind the taskbar

--- a/src/app/user-apps/title/title.component.css
+++ b/src/app/user-apps/title/title.component.css
@@ -3,6 +3,6 @@
     text-align: center;
     /* width: 40%; */
     background-color: orange;
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
 }
